# fakwin

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  install.sh
dbus/: org.kde.KWin.xml
include/: FakWin.hpp
src/: FakWin.cpp  Server.cpp
